--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^6.1.1
   cloud_firestore: 6.0.3
   crypto: ^3.0.3
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
